--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,16 +13,20 @@
       <li class="nav-item">
         <a class="nav-link js-scrollTo" href="#skills">Skills</a>
       </li>
-      <div class="icon">
+      {{!--
+      <div class="icon"> --}}
         <li class="nav-item">
-          <a class="nav-link lkdn" href="https://www.linkedin.com/in/elisegriset/" target="_blank">
+          <a class="nav-link lkdn" href="https://www.linkedin.com/in/elisegriset/" target="_blank" data-toggle="tooltip" data-placement="top"
+            title="See my Linkedin">
+            <img src="images/lkdn.png" width="20px">
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link gith" href="https://github.com/elisegriset92" target="_blank">
+          <a class="nav-link gith" href="https://github.com/elisegriset92" target="_blank" data-toggle="tooltip" data-placement="top"
+            title="See my Github">
           </a>
         </li>
-      </div>
+        {{!-- </div> --}}
 
     </ul>
   </div>
@@ -163,6 +167,7 @@
     My technical skills
   </h5>
   <br>
+  <br>
 
   <div class="container">
     <div class="row">
@@ -179,6 +184,11 @@
         <h5>Frameworks</h5>
         <p>Express.js, Mongoose, Angular4</p>
       </div>
+    </div>
+    <br>
+    <br>
+    <div class="row">
+
       <div class="col-sm">
         <h5>Runtimes </h5>
         <p>Node.js</p>
@@ -191,6 +201,7 @@
         <h5>Other Dev Tools</h5>
         <p>GitHub, Trello, Heroku, Cloudinary</p>
       </div>
+
     </div>
   </div>
 </div>
