--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,11 @@
-<nav id="my-element" class="firstB">
+<nav id="my-element" class="firstB nav-pills">
   <div class="navigation">
     <ul class="nav">
       <li class="nav-item">
         <a class="nav-link js-scrollTo" href="#">hey</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link js-scrollTo" href="#work">My Work</a>
+        <a class="nav-link js-scrollTo" data-toggle="tab" href="#work">My Work</a>
       </li>
       <li class="nav-item">
         <a class="nav-link js-scrollTo" href="#about">About</a>
@@ -13,20 +13,23 @@
       <li class="nav-item">
         <a class="nav-link js-scrollTo" href="#skills">Skills</a>
       </li>
-      {{!--
-      <div class="icon"> --}}
-        <li class="nav-item">
-          <a class="nav-link lkdn" href="https://www.linkedin.com/in/elisegriset/" target="_blank" data-toggle="tooltip" data-placement="top"
-            title="See my Linkedin">
-            <img src="images/lkdn.png" width="20px">
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link gith" href="https://github.com/elisegriset92" target="_blank" data-toggle="tooltip" data-placement="top"
-            title="See my Github">
-          </a>
-        </li>
-        {{!-- </div> --}}
+      <li class="vide">
+
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link lkdn" href="https://www.linkedin.com/in/elisegriset/" target="_blank" data-toggle="tooltip" data-placement="top"
+          title="See my Linkedin">
+          <img src="images/lkdn.png" width="20px">
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link gith" href="https://github.com/elisegriset92" target="_blank" data-toggle="tooltip" data-placement="top"
+          title="See my Github">
+          <img src="images/git.png" width="25px">
+
+        </a>
+      </li>
 
     </ul>
   </div>
