--- a/views/resume.hbs
+++ b/views/resume.hbs
@@ -4,6 +4,13 @@
     <h5>Back to the Portfolio </h5>
   </a>
 
+
+  <a href="/images/Resume - Elise Griset.pdf">
+    <button class="cv">Download my Resume</button>
+  </a>
+  <br>
+  <br>
+
   <img src="images/1.png">
   <img src="images/2.png">
 </div>
