--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -276,6 +276,45 @@ h5 {
   color: white;
 }
 
+.cv {
+  background: rgb(228, 187, 6);
+  color: white;
+  border: none;
+  position: relative;
+  height: 60px;
+  font-size: 1.6em;
+  padding: 0 2em;
+  cursor: pointer;
+  transition: 800ms ease all;
+  outline: none;
+}
+.cv:hover {
+  background: #fff;
+  color: black;
+}
+.cv:before,
+.cv:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 2px;
+  width: 0;
+  background: rgb(228, 187, 6);
+  color: black;
+  transition: 400ms ease all;
+}
+.cv:after {
+  right: inherit;
+  top: inherit;
+  left: 0;
+  bottom: 0;
+}
+.cv:hover:before,
+.cv:hover:after {
+  width: 100%;
+  transition: 800ms ease all;
+}
 // about snake
 .about-snake {
   background-image: url("../images/back.jpg");
