--- a/views/index.hbs
+++ b/views/index.hbs
@@ -176,16 +176,24 @@
     <div class="row">
       <div class="col-sm">
         <h5>Languages</h5>
-        <p>HTML5, CSS3, JavaScript (ES5, ES6), TypeScript
+        <p>HTML5
+          <br>CSS3
+          <br>JavaScript (ES5, ES6)
+          <br>TypeScript
         </p>
       </div>
       <div class="col-sm">
         <h5>Libraries</h5>
-        <p>jQuery, APIs, Bootstrap, Bulma</p>
+        <p>jQuery
+          <br>APIs
+          <br>Bootstrap
+          <br>Bulma</p>
       </div>
       <div class="col-sm">
         <h5>Frameworks</h5>
-        <p>Express.js, Mongoose, Angular4</p>
+        <p>Express.js
+          <br>Mongoose
+          <br>Angular4</p>
       </div>
     </div>
     <br>
@@ -202,7 +210,10 @@
       </div>
       <div class="col-sm">
         <h5>Other Dev Tools</h5>
-        <p>GitHub, Trello, Heroku, Cloudinary</p>
+        <p>GitHub
+          <br>Trello
+          <br>Heroku
+          <br>Cloudinary</p>
       </div>
 
     </div>
