--- a/views/index.hbs
+++ b/views/index.hbs
@@ -43,7 +43,6 @@
   <div class="look">
     <a class="js-scrollTo" href="#work"> Look what I've done so far
       <br>
-      <br>
       <i class="arrow down"></i>
     </a>
     <a id="work"></a>
@@ -191,7 +190,8 @@
         <h5>Frameworks</h5>
         <p>Express.js
           <br>Mongoose
-          <br>Angular4</p>
+          <br>Angular2+
+          <br>VueJS</p>
       </div>
     </div>
     <br>
