--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,8 +74,7 @@ a:hover {
 }
 
 .firstB {
-  background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%),
-    url("../images/fabian-grohs-616504-unsplash.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url("../images/fabian-grohs-616504-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 400%;
@@ -87,12 +86,12 @@ a:hover {
   letter-spacing: 3px;
   text-align: center;
   padding-top: 10vh;
-  padding-bottom: 10vh;
+  padding-bottom: 5vh;
   transition: transform .2s;
 }
 
 .look:hover {
-  transform: scale(1.3);
+  transform: scale(1.2);
 }
 
 i {
@@ -159,8 +158,7 @@ i {
   padding-left: 10vh;
   padding-top: 10vh;
   padding-bottom: 10vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%),
-    url("../images/joao-paulo-pereira-645791-unsplash.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url("../images/joao-paulo-pereira-645791-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
