--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -7,6 +7,7 @@ ul {
   background-color: rgba(0, 0, 0, 0.8);
   padding: 10px;
 }
+
 a {
   color: white;
   text-decoration: none;
@@ -42,16 +43,17 @@ a:hover {
   margin-top: 15px;
   z-index: 9;
 }
+
 .vide {
   padding-left: 105vh;
 }
+
 .lkdn {
   // background-image: url(../images/Linkedin.png);
   // background-size: 100%;
   // background-repeat: no-repeat;
   height: 33px;
-  transition: transform .2s;
-  // margin-left: 80vw;
+  transition: transform .2s; // margin-left: 80vw;
 }
 
 .gith {
@@ -72,7 +74,6 @@ a:hover {
 }
 
 // first bloc
-
 .quote {
   font-family: 'Shadows Into Light', cursive;
   color: white;
@@ -82,8 +83,7 @@ a:hover {
 }
 
 .firstB {
-  background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5)100%),
-    url("../images/fabian-grohs-616504-unsplash.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5)100%), url("../images/fabian-grohs-616504-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 400%;
@@ -95,15 +95,15 @@ a:hover {
   letter-spacing: 3px;
   text-align: center;
   padding-top: 10vh;
+  padding-bottom: 5vh;
   transition: transform .2s;
 }
 
-.look p:hover {
-  transform: scale(1.6);
+.look:hover {
+  transform: scale(1.3);
 }
 
 // arrow down
-
 i {
   border: solid rgb(228, 187, 6);
   border-width: 0 5px 5px 0;
@@ -147,9 +147,11 @@ i {
 .col-sm {
   position: initial;
 }
+
 .card-title {
   letter-spacing: 3px;
 }
+
 .btn-success {
   background-color: rgb(228, 187, 6);
   border: rgb(228, 187, 6);
@@ -168,9 +170,7 @@ i {
   padding-left: 10vh;
   padding-top: 10vh;
   padding-bottom: 10vh;
-
-  background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5)100%),
-    url("../images/joao-paulo-pereira-645791-unsplash.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5)100%), url("../images/joao-paulo-pereira-645791-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -183,6 +183,7 @@ i {
   display: inline-block;
   margin: 5vh 5vh;
 }
+
 .thirdB a:hover {
   background-color: transparent;
 }
@@ -192,18 +193,15 @@ i {
 }
 
 // fourth bloc
-
 .fourthB {
   height: 200%;
   padding-left: 10vh;
   padding-top: 10vh;
   background-color: rgb(228, 187, 6);
   color: black;
-
   padding-bottom: 20vh;
   background-repeat: no-repeat;
-  background-size: cover;
-  // color: white;
+  background-size: cover; // color: white;
   width: 100%;
 }
 
@@ -253,8 +251,7 @@ h5 {
 }
 
 // resume
-
-.resume  a:hover {
+.resume a:hover {
   color: black;
   background-color: white;
 }
@@ -268,9 +265,11 @@ h5 {
   text-align: center;
   background-image: url("../images/rawpixel-577482-unsplash.jpg");
 }
+
 .resume h5 {
   color: black;
 }
+
 .resume h5:hover {
   background-color: black;
   color: white;
@@ -288,10 +287,12 @@ h5 {
   transition: 800ms ease all;
   outline: none;
 }
+
 .cv:hover {
   background: #fff;
   color: black;
 }
+
 .cv:before,
 .cv:after {
   content: '';
@@ -304,17 +305,20 @@ h5 {
   color: black;
   transition: 400ms ease all;
 }
+
 .cv:after {
   right: inherit;
   top: inherit;
   left: 0;
   bottom: 0;
 }
+
 .cv:hover:before,
 .cv:hover:after {
   width: 100%;
   transition: 800ms ease all;
 }
+
 // about snake
 .about-snake {
   background-image: url("../images/back.jpg");
