--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,14 +18,14 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link lkdn" href="https://www.linkedin.com/in/elisegriset/" target="_blank" data-toggle="tooltip" data-placement="top"
-          title="See my Linkedin">
+        <a class="nav-link lkdn" href="https://www.linkedin.com/in/elisegriset/" target="_blank" data-toggle="tooltip"
+          data-placement="top" title="Get in touch on Linkedin">
           <img src="images/lkdn.png" width="20px">
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link gith" href="https://github.com/elisegriset92" target="_blank" data-toggle="tooltip" data-placement="top"
-          title="See my Github">
+        <a class="nav-link gith" href="https://github.com/elisegriset92" target="_blank" data-toggle="tooltip"
+          data-placement="top" title="See my Github">
           <img src="images/git.png" width="25px">
 
         </a>
@@ -43,6 +43,7 @@
   <div class="look">
     <a class="js-scrollTo" href="#work"> Look what I've done so far
       <br>
+      <br>
       <i class="arrow down"></i>
     </a>
     <a id="work"></a>
@@ -53,8 +54,9 @@
 <div class="secondB">
 
   <h5>
-    My work
+    My school work
   </h5>
+  <br>
 
 
   <div class="container">
@@ -66,7 +68,8 @@
             <div class="text">
               <p>Game</p>
               <p>Canvas, JS, jQuery</p>
-              <a href="https://elisegriset92.github.io/ironhack-project1/" target="_blank" class="btn btn-success">See website</a>
+              <a href="https://elisegriset92.github.io/ironhack-project1/" target="_blank" class="btn btn-success">See
+                website</a>
               <br> {{!--
               <a href="/about-snake" class="btn btn-success">See more</a> --}}
 
@@ -132,16 +135,25 @@
 
         <p>I would like to work as a
           <b>web developer</B> because it’s a dynamic and innovative position where I can improve myself day after day.
-          <br>I need a job that fits me, where I can grow every day. I enjoy stimulating, challenging and exciting environments.
+          <br>I need a job that fits me, where I can grow every day. I enjoy stimulating, challenging and exciting
+          environments.
           When I dive into a new task, I’m entirely involved and nothing can stop me !
           <br>
-          <br>I worked for 3 years in event planning for a Parisian agency. If you’ve ever been to a seminar, then you know that
-          it’s often connected to a huge party and/or a super fun incentive activity, generally in beautiful venues and gorgeous
-          destinations (this part was -obviously- the best of the job!) I organized many of these special experiences, including
+          <br>My experiences at Jin and my involvement in the creation of the start-up Pitchboy were rich and allowed me
+          to have a 360 vision on the code and the work of fullstack developer in Agile methodology.
+          <br>Today I know that the creative side of my personality needs to express itself, which is why I want to
+          specialize in frontend development in the future.
+          <br><br>I worked for 3 years in event planning for a Parisian agency. If you’ve ever been to a seminar, then you
+          know that
+          it’s often connected to a huge party and/or a super fun incentive activity, generally in beautiful venues and
+          gorgeous
+          destinations (this part was -obviously- the best of the job!) I organized many of these special experiences,
+          including
           corporate events and meetings from 10 to 1000 people.
 
 
-          <p>Above all : creativity, innovation, originality and fun are the values I look for — and will bring — to a job
+          <p>Above all : creativity, innovation, originality and fun are the values I look for — and will bring — to a
+            job
           </p>
         </p>
         <div class="centerbtn">
@@ -172,46 +184,45 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <h5>Languages</h5>
+        <h5>FrontEnd</h5>
         <p>HTML5
           <br>CSS3
+          <br>SASS
           <br>JavaScript (ES5, ES6)
           <br>TypeScript
+          <br>jQuery
+          <br>Bootstrap
+          <br>Bulma
+          <br>Angular4
+          <br>VueJs
+          <br>VueX
+          <br>Cypress.js
         </p>
       </div>
-      <div class="col-sm">
-        <h5>Libraries</h5>
-        <p>jQuery
-          <br>APIs
-          <br>Bootstrap
-          <br>Bulma</p>
-      </div>
-      <div class="col-sm">
-        <h5>Frameworks</h5>
-        <p>Express.js
-          <br>Mongoose
-          <br>Angular2+
-          <br>VueJS</p>
-      </div>
-    </div>
-    <br>
-    <br>
-    <div class="row">
 
       <div class="col-sm">
-        <h5>Runtimes </h5>
-        <p>Node.js</p>
+        <h5>Backend </h5>
+        <p>Node.js
+          <br>Express.js
+          <br>MongoDB
+          <br>MySQL
+          <br>AWS
+          <br>Postman
+          <br>Mocha
+          <br>Chai</p>
       </div>
       <div class="col-sm">
-        <h5>Databases</h5>
-        <p>MongoDB</p>
-      </div>
-      <div class="col-sm">
-        <h5>Other Dev Tools</h5>
+        <h5>Other Tools</h5>
         <p>GitHub
+          <br>Gitlab
+          <br>Bitbucket
           <br>Trello
           <br>Heroku
-          <br>Cloudinary</p>
+          <br>WordPress
+          <br>Socket.io
+          <br>Slack
+          <br>Jira
+        </p>
       </div>
 
     </div>
@@ -221,7 +232,7 @@
 <footer>
   <div class="footer">
 
-    <p>© Elise Griset</p>
+    <p>© Elise Griset 🍟</p>
   </div>
 
 </footer>
